<resources>
    <string name="app_name">CashMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ENT">عنایت ابوالحسنی</string>
    <string name="txtCount">تعداد : 10</string>
    <string name="txtTotalcost">کل هزینه</string>
    <string name="Rial">ریال</string>
    <string name="txtEvents">رویداد ها</string>
    <string name="txtDisplayinvoices">نمایش فاکتور ها</string>
    <string name="txtTotalnumber">تعداد کل</string>
    <string name="txtLastInvoice">آخرین فاکتور</string>
    <string name="txtMostInvoices">بیشترین فاکتور</string>
    <string name="txtAddNewInvoice">+ ثبت فاکتور جدید</string>
    <string name="_1404_10_13_15_38">امروز شنبه 1404/10/13 ساعت 15:38</string>
    <string name="price">هزینه</string>
    <string name="title">عنوان (یادداشت)</string>
    <string name="Invoiceـdetails">مشخصات فاکتور</string>
    <string name="Invoiceـpreviewـtext_detail">پیش نمایش فاکتور شما در این قسمت قرار میگیرد</string>
    <string name="Invoiceـpreviewـtext">پیش نمایش فاکتور</string>
    <string name="txt_category">دسته بندی:</string>
    <string name="txt_total_price">مجموع حساب: 0 </string>
    <string name="txt_date_list_invoices">فاکتور ها از: 04/11/01 تا 04/11/11</string>
    <string name="txt_all_price">کل هزینه</string>
    <string name="taxiـfare">هزینه تاکسی</string>
    <string name="commuting">رفت و آمد</string>
    <string name="DateAndTime">تاریخ ثبت : چهارشنبه 1404/11/22 ساعت 23:23</string>
    <string name="txt_btn_share">به اشتراک گذاری</string>
    <string name="txt_invoice_view">مشاهده فاکتور</string>
    <string name="txt_payment_type">نوع پرداختی :</string>
    <string name="txt_cash_card">نقد / کارت</string>
    <string name="txt_Buy_from_the_store"><![CDATA[خرید >> فروشگاه]]></string>
    <string name="txt_Name_of_invoice_registrant">نام ثبت کننده فاکتور :</string>
    <string name="txt_Invoice_registration_date">تاریخ ثبت فاکتور :</string>
    <string name="txt_Other_similar_invoices">دیگر فاکتور های مشابه</string>
</resources>